poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: poll-deployment
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      restartPolicy: Always
      containers:
        - name: poll
          image: epitechcontent/t-dop-600-poll:k8s
          resources:
            limits:
              memory: "128M"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - poll
              topologyKey: kubernetes.io/hostname
