redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: default
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - name: redis-port
      port: 6379
      targetPort: 6379
  selector:
    app: redis
